first set of updates for using v16 physics in coupled

--- a/workflow/cases/coupled_free_forecast_wave_v15.yaml
+++ b/workflow/cases/coupled_free_forecast_wave_v15.yaml
@@ -32,11 +32,11 @@ case:
 
   fv3_gfs_settings:
     CASE: C384
-    LEVS: 128
+    LEVS: 65
     DELTIM: 450
     SEEDLET: 10
-    CCPP_SUITE: FV3_GFS_v16beta_coupled
-    CPL_ATMIC: CFSRfracL127
+    CCPP_SUITE: FV3_GFS_v15p2_coupled
+    CPL_ATMIC: CFSRfracL64
     nst_anl: no
     DO_SKEB: false
     DO_SHUM: false
