updates to use v16 physics input.nml options

--- a/workflow/defaults/fv3_gfs.yaml
+++ b/workflow/defaults/fv3_gfs.yaml
@@ -23,6 +23,7 @@ fv3_gfs_defaults: &fv3_gfs_defaults
   DO_SHUM: false
   DO_SKEB: false
   DO_SPPT: false
+  n_split: 8
 
   RUN_EFCSGRP: NO
   zhao_mic: YES
@@ -145,7 +146,7 @@ fv3_gfs_defaults: &fv3_gfs_defaults
         "11":
            ncld: 5
            nwat: 6
-           FIELD_TABLE: "$HOMEgfs/parm/parm_fv3diag/field_table_gfdl"
+           FIELD_TABLE: "$HOMEgfs/parm/parm_fv3diag/field_table_gfdl_satmedmf"
            dnats: 1
            cal_pre: false
            do_sat_adjust: true
