Issue #164 - update machine-setup.sh for Hera stack, update checkout/build/linking for UPP tag that supports hpc-stack, remove post patch in HERA.env

--- a/Externals.cfg
+++ b/Externals.cfg
@@ -22,7 +22,8 @@ protocol = git
 required = True
 
 [EMC_post]
-tag = upp_gfsv16_release.v1.1.1
+#No externals setting = .gitmodules will be invoked for CMakeModules and comupp/src/lib/crtm2 submodules
+tag = upp_v10.0.3
 local_path = sorc/gfs_post.fd
 repo_url = https://github.com/NOAA-EMC/EMC_post.git
 protocol = git
