--- a/workflow/cases/coupled_free_forecast_nofrac_wave.yaml
+++ b/workflow/cases/coupled_free_forecast_nofrac_wave.yaml
@@ -1,7 +1,6 @@
 case:
   places:
     workflow_file: layout/free_forecast_gfs.yaml
-    #BASE_CPLIC: /scratch2/NCEPDEV/climate/climpara/S2S/IC
 
   settings: 
     SDATE: 2013-04-01t00:00:00
@@ -16,7 +15,7 @@ case:
     print_esmf: .true.
     nems_temp: 'cpld_wave'
     mom6ic_prepared: .false.
-    inline_post: .false.
+    inline_post: .true. 
     KEEPDATA: NO
 
   nsst:
@@ -32,10 +31,10 @@ case:
 
   fv3_gfs_settings:
     CASE: C384
-    LEVS: 65
-    DELTIM: 450
+    LEVS: 128
+    DELTIM: 300
     SEEDLET: 10
-    CCPP_SUITE: FV3_GFS_v15p2_coupled
+    CCPP_SUITE: FV3_GFS_v16beta_coupled
     CPL_ATMIC: CFSR
     nst_anl: no
     DO_SKEB: false
@@ -61,7 +60,7 @@ case:
     waveGRD: 'gwes_30m'
     wavepostGRD: 'gwes_30m'
     waveesmfGRD: ''
-    waveinterpGRD: ''
+    waveinterpGRD: ''    
 
   post:
     downset: 2
