--- a/env/WCOSS_C.env
+++ b/env/WCOSS_C.env
@@ -198,11 +198,9 @@ elif [ $step = "epos" ]; then
     [[ $NTHREADS_EPOS -gt $nth_max ]] && export NTHREADS_EPOS=$nth_max
     export APRUN_EPOS="$launcher -j 1 -n $npe_epos -N $npe_node_epos -d $NTHREADS_EPOS -cc depth"
 
-elif [ $step = "fv3ic" ]; then
+elif [ $step = "init" ]; then
 
-    export NTHREADS_CHGRES=${nth_chgres:-$npe_node_max}
-    [[ $NTHREADS_CHGRES -gt $npe_node_max ]] && export NTHREADS_CHGRES=$npe_node_max
-    export APRUN_CHGRES="$launcher -j 1 -n 1 -N 1 -d $NTHREADS_CHGRES -cc depth"
+    export APRUN="$launcher"
 
 elif [ $step = "vrfy" ]; then
 
