add seperate resources for wave post jobs Issue #209

--- a/workflow/defaults/default_resources.yaml
+++ b/workflow/defaults/default_resources.yaml
@@ -117,6 +117,8 @@ util_resource_table:
       #                    ranks ppn  wallclock          threads  MB_batch MB_per_rank
   prepbufr:              [    4,    4, !timedelta "00:15:00",   1, 3072M,      null   ]
   fv3ic:                 [   24,   24, !timedelta "00:30:00",   1, 3072M,      null   ]
+  wavepostpnt:           [   80,   40, !timedelta "00:30:00",   1, 3072M,      null   ]
+  wavepostgrd:           [   10,   10, !timedelta "00:30:00",   1, 3072M,      null   ]
   dump_waiter:           [    1,    1, !timedelta "01:00:00",   1,  300M,      null   ]
   make_next_cycles:      [    1,    1, !timedelta "00:15:00",   1,  600M,      null   ]
   one_hour_exclusive:    [    2,    1, !timedelta "04:00:00",   1,  300M,      null   ]
@@ -191,6 +193,18 @@ default_resources: &default_resources
       mpi_ranks: !icalc doc.util_resource_table.fv3ic[0]
       max_ppn: !icalc doc.util_resource_table.fv3ic[1]
       walltime: !icalc doc.util_resource_table.fv3ic[2]
+
+  run_wavepostpnt: !JobRequest
+    - batch_memory: !icalc doc.util_resource_table.wavepostpnt[4]
+      mpi_ranks: !icalc doc.util_resource_table.wavepostpnt[0]
+      max_ppn: !icalc doc.util_resource_table.wavepostpnt[1]
+      walltime: !icalc doc.util_resource_table.wavepostpnt[2]
+
+  run_wavepostgrd: !JobRequest
+    - batch_memory: !icalc doc.util_resource_table.wavepostgrd[4]
+      mpi_ranks: !icalc doc.util_resource_table.wavepostgrd[0]
+      max_ppn: !icalc doc.util_resource_table.wavepostgrd[1]
+      walltime: !icalc doc.util_resource_table.wavepostgrd[2]
 
   run_dump_waiter: !JobRequest
     - batch_memory: !icalc doc.util_resource_table.dump_waiter[4]
