Updates for hpc-stack
- Remove unneeded ignores from .gitignore
- Update Externals.cfg and checkout.sh for component stack versions
- Update link_fv3gfs.sh for changed component links
- Further Hera module updates for hpc-stack

Refs: #164

--- a/Externals.cfg
+++ b/Externals.cfg
@@ -1,7 +1,7 @@
 # External sub-modules of global-workflow
 
 [FV3GFS]
-tag = GFS.v16.0.14
+hash = 06bc77ba3640358b54b6ff03f542e2ce0d3242be
 local_path = sorc/fv3gfs.fd
 repo_url = https://github.com/ufs-community/ufs-weather-model.git
 protocol = git
@@ -15,7 +15,7 @@ protocol = git
 required = True
 
 [GLDAS]
-tag = gldas_gfsv16_release.v1.13.0
+tag = gldas_gfsv16_release.v1.14.0
 local_path = sorc/gldas.fd
 repo_url = https://github.com/NOAA-EMC/GLDAS.git
 protocol = git
@@ -30,7 +30,7 @@ protocol = git
 required = True
 
 [UFS_UTILS]
-tag = ops-gfsv16.0.0
+#tag = ops-gfsv16.0.0
 local_path = sorc/ufs_utils.fd
 repo_url = https://github.com/NOAA-EMC/UFS_UTILS.git
 protocol = git
