--- a/workflow/defaults/fv3_gdas.yaml
+++ b/workflow/defaults/fv3_gdas.yaml
@@ -16,6 +16,8 @@ fv3_gdas_defaults: &fv3_gdas_defaults
   MEMBER: -1
   d4_bg: 0.15
   dddmp: 0.2
+  min_lakeice: 0.15
+  min_seaice: 0.15
   ISEED: 0
   SET_STP_SEED: YES
   DO_SHUM: NO
