--- a/workflow/defaults/fv3_gfs.yaml
+++ b/workflow/defaults/fv3_gfs.yaml
@@ -17,6 +17,8 @@ fv3_gfs_defaults: &fv3_gfs_defaults
   MEMBER: -1
   d4_bg: 0.15
   dddmp: 0.2
+  min_lakeice: 0.15
+  min_seaice: 0.15 
   ISEED: 0
   SEEDLET: 1
   SET_STP_SEED: YES
