--- a/workflow/config/base.yaml
+++ b/workflow/config/base.yaml
@@ -188,6 +188,9 @@ config_base:
     export OUTPUT_GRID="{doc.output_settings.OUTPUT_GRID}"
     export OUTPUT_FILE="{doc.output_settings.OUTPUT_FILE}"
 
+    # inline post
+    export WRITE_DOPOST="{doc.settings.inline_post}"
+
     # Microphysics Options: 99-ZhaoCarr, 8-Thompson; 6-WSM6, 10-MG, 11-GFDL
     export imp_physics={doc.fv3_gfs_settings.imp_physics}
     
