--- a/workflow/defaults/settings.yaml
+++ b/workflow/defaults/settings.yaml
@@ -29,7 +29,7 @@ default_settings: &default_settings
   nco_mode: NO
   use_nco_ecflow_headers: NO
   print_esmf: .false.
-  esmf_profile: .flase.
+  esmf_profile: .false.
   prod_util_module: !calc doc.platform.get("prod_util_module","prod_util")
   ecflow_real_clock: no
   ecflow_virtual_clock: no
