added and debugged efsoi task

--- a/env/HERA.env
+++ b/env/HERA.env
@@ -140,6 +140,18 @@ elif [ $step = "eupdfsoi" ]; then
     export USE_CFP=${USE_CFP:-"YES"}
     export APRUNCFP="$launcher -n \$ncmd --multi-prog"
 
+elif [ $step = "efsoi" ]; then
+
+    nth_max=$(($npe_node_max / $npe_node_efsoi))
+
+    export NTHREADS_ENKF=${nth_efsoi:-$nth_max}
+    [[ $NTHREADS_ENKF -gt $nth_max ]] && export NTHREADS_ENKF=$nth_max
+    export APRUN_ENKF="$launcher"
+
+    export CFP_MP=${CFP_MP:-"YES"}
+    export USE_CFP=${USE_CFP:-"YES"}
+    export APRUNCFP="$launcher -n \$ncmd --multi-prog"
+
 elif [ $step = "fcst" ]; then
 
     nth_max=$(($npe_node_max / $npe_node_fcst))
