update .gitignore to exclude build and install directories as well as compiled files. bugfix in build_workflow_utils.sh hack. nceplibs-ncio now creates the module ncio and not fv3gfs_ncio.

--- a/.gitignore
+++ b/.gitignore
@@ -2,12 +2,14 @@
 #--------------------------
 __pycache__
 *.pyc
-*.o
+*.[aox]
 *.mod
 
-# Ignore exec folder
+# Ignore folders
 #-------------------
 exec/
+build*/
+install*/
 
 # Ignore fix directory symlinks
 #------------------------------
