--- a/sorc/reg2grb2.fd/CMakeLists.txt
+++ b/sorc/reg2grb2.fd/CMakeLists.txt
@@ -4,7 +4,7 @@ regdiag.f
 )
 
 if(CMAKE_Fortran_COMPILER_ID MATCHES "^(Intel)$")
-  set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -convert big_endian -fp-model precise -assume byterecl")
+  set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -free -convert big_endian -fp-model precise -assume byterecl")
 elseif(CMAKE_Fortran_COMPILER_ID MATCHES "^(GNU)$")
   set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -fconvert=big-endian")
 endif()
@@ -13,13 +13,12 @@ set(exe_name reg2grb2.x)
 add_executable(${exe_name} ${fortran_src})
 target_link_libraries(
   ${exe_name}
-  landsfcutil::landsfcutil
+  landsfcutil::landsfcutil_d
   ip::ip_d
   sp::sp_d
   bacio::bacio_4
   w3nco::w3nco_4
-  wgrib2::wgrib2
-  jasper::jasper
+  wgrib2::wgrib2_api
   NetCDF::NetCDF_Fortran)
 
 if(OpenMP_Fortran_FOUND)
