Update settings for prototype 6
Coupled cases are updated to the settings to be used for prototype 6.

For some settings, hard-coded values in parsing_namelists_FV3 had to
be replaced with existing environment variables.

Also cleaned up the fcst config yaml by removing redundant definitions
and renaming the variable name for the level settings.

Refs: #277

--- a/workflow/cases/coupled_free_forecast.yaml
+++ b/workflow/cases/coupled_free_forecast.yaml
@@ -32,7 +32,7 @@ case:
   fv3_gfs_settings:
     CASE: C384
     LEVS: 128
-    DELTIM: 300
+    DELTIM: 225
     min_lakeice: 0.15
     min_seaice: 1.0e-11
     SEEDLET: 10
@@ -42,8 +42,10 @@ case:
     DO_SKEB: false
     DO_SHUM: false
     DO_SPPT: false
+    k_split: 2
+    n_split: 6
     layout:
-       x: 6
+       x: 12
        y: 12
        nth: 1
        WGRP: 1
