--- a/workflow/config/fcst.yaml
+++ b/workflow/config/fcst.yaml
@@ -19,13 +19,15 @@ config_fcst:
         export d4_bg={doc.fv3_gfs_settings.phy_dependent_var.d4_bg}
     - otherwise: ""
 
-  level_127: !FirstTrue
+  level_exports: !FirstTrue
     - when: !calc doc.fv3_gfs_settings.LEVS==128
       do: !expand |
-         export  tau=5.0
-         export  rf_cutoff=7.5e2
-         export  d2_bg_k1=0.20
-         export  d2_bg_k2=0.04
+        export  tau=10.0
+        export  rf_cutoff=7.5e2
+        export  d2_bg_k1=0.20
+        export  d2_bg_k2=0.04
+        export  dz_min=2
+        export  n_sponge=42
     - otherwise: ""
 
   resource_a: !FirstTrue
@@ -109,9 +111,6 @@ config_fcst:
     # Options of stratosphere O3 physics reaction coefficients
     export new_o3forc="{tools.YES_NO(doc.fv3_gfs_settings.new_o3force)}"
 
-    export  n_sponge=42
-    export  d2_bg_k1=0.20
-    export  d2_bg_k2=0.04
 
     export do_ugwp=".false."
     export do_tofd=".true."
@@ -158,7 +157,7 @@ config_fcst:
 
     export FIELD_TABLE="{doc.fv3_gfs_settings.phy_dependent_var.FIELD_TABLE}"
     {more_exports_for_microphys}
-    {level_127}
+    {level_exports}
 
 
     #coupling settings 
