Add additional settings for prototype 6
Two additional settings needed to be added for prototype 6:
psm_bc = 1
FSICL = 0

Refs: #277

--- a/workflow/config/fcst.yaml
+++ b/workflow/config/fcst.yaml
@@ -163,9 +163,12 @@ config_fcst:
     #coupling settings 
     export FRAC_GRID="{doc.settings.FRAC_GRID}"
     export cplmode="{doc.settings.cplmode}"
+    export psm_bc="{doc.fv3_gfs_settings.psm_bc}"
 
     export min_lakeice="{doc.fv3_gfs_settings.min_lakeice}"
     export min_seaice="{doc.fv3_gfs_settings.min_seaice}" 
+
+    export FSICL="{doc.fv3_gfs_settings.FSICL}"
 
     # Stochastic physics parameters
     # nam_stochy section
