--- a/workflow/defaults/fv3_gfs.yaml
+++ b/workflow/defaults/fv3_gfs.yaml
@@ -22,6 +22,7 @@ fv3_gfs_defaults: &fv3_gfs_defaults
   ISEED: 0
   SEEDLET: 1
   SET_STP_SEED: YES
+  psm_bc: 0
   DO_SHUM: false
   DO_SKEB: false
   DO_SPPT: false
@@ -159,6 +160,8 @@ fv3_gfs_defaults: &fv3_gfs_defaults
            nord: 2
            dddmp: 0.1
            d4_bg: 0.12
+
+  FSICL: 99999
 
   MEDPETS: !FirstTrue
     - when: !calc QUILTING
