--- a/workflow/cases/coupled_free_forecast_nofrac_wave.yaml
+++ b/workflow/cases/coupled_free_forecast_nofrac_wave.yaml
@@ -39,6 +39,8 @@ case:
     CCPP_SUITE: FV3_GFS_v16_coupled
     CPL_ATMIC: CFSR
     nst_anl: yes
+    psm_bc: 1
+    FSICL: 0
     DO_SKEB: false
     DO_SHUM: false
     DO_SPPT: false
