Adjust damping parameter for prototype 6
Adjusts the value of dddmp to 0.2 for prototype 6.

Refs: #277

--- a/workflow/cases/coupled_free_forecast_wave.yaml
+++ b/workflow/cases/coupled_free_forecast_wave.yaml
@@ -41,6 +41,7 @@ case:
     CPL_ATMIC: CFSRfracL127
     nst_anl: yes
     psm_bc: 1
+    dddmp: 0.2
     FSICL: 0
     DO_SKEB: false
     DO_SHUM: false
