--- a/workflow/cases/coupled_free_forecast_nofrac_wave.yaml
+++ b/workflow/cases/coupled_free_forecast_nofrac_wave.yaml
@@ -45,11 +45,11 @@ case:
     k_split: 2
     n_split: 6
     layout:
-       x: 12
-       y: 12
+       x: 8
+       y: 24
        nth: 1
        WGRP: 1
-       WGRP_NTASKS: 24
+       WGRP_NTASKS: 80
        WRTIOBUF: "32M"
 
   ocn_settings:
@@ -59,8 +59,8 @@ case:
     ICEPETS: 48
 
   wave_settings: 
-    WAVPETS: 136
-    CPL_WAVIC: CFSR
+    WAVPETS: 140
+    CPL_WAVIC: CFSRwave20200925
     waveGRD: 'gwes_30m'
     wavepostGRD: 'gwes_30m'
     waveesmfGRD: ''
