Add two WAFS sorc folders to .gitignore
- two missing WAFS symlinks were added to link_fv3gfs.sh in prior
commit; include them in gitignore file now

Refs: #272

--- a/.gitignore
+++ b/.gitignore
@@ -81,8 +81,10 @@ sorc/recentersigp.fd
 sorc/shave.fd
 sorc/wafs_awc_wafavn.fd
 sorc/wafs_blending.fd
+sorc/wafs_blending_0p25.fd
 sorc/wafs_cnvgrib2.fd
 sorc/wafs_gcip.fd
+sorc/wafs_grib2_0p25.fd
 sorc/wafs_makewafs.fd
 sorc/wafs_setmissing.fd
 
