Add GRDFIX and OROFIX places settings to allow using custom locations for gridspec and orography files, respectively.

--- a/workflow/config/base.yaml
+++ b/workflow/config/base.yaml
@@ -141,6 +141,8 @@ config_base:
     export ARCDIR="$NOSCRUB/archive/$PSLOT"
     export ICSDIR="{doc.places.ICSDIR}"
     export ATARDIR="{doc.archiving.ATARDIR}"
+    export OROFIX="{doc.places.OROFIX}"
+    export GRDFIX="{doc.places.GRDFIX}"
     
     # Commonly defined parameters in JJOBS
     export envir=${{envir:-"prod"}}
