--- a/workflow/schema/chem.yaml
+++ b/workflow/schema/chem.yaml
@@ -7,3 +7,9 @@ chem_settings_template: !Template &chem_settings_template
     type: string
     allowed: [ gsdchem ]
     description: "model selection for aerosols"
+  CFGDIR:
+    type: string
+    description: "directory containing model resource files"
+  INPDIR:
+    type: string
+    description: "directory containing model input data"
