--- a/workflow/schema/chem.yaml
+++ b/workflow/schema/chem.yaml
@@ -13,3 +13,6 @@ chem_settings_template: !Template &chem_settings_template
   INPDIR:
     type: string
     description: "directory containing model input data"
+  ntdiag:
+    type: int
+    description: "number of diagnostic tracers"
