--- a/workflow/cases/aerosol_firex_forecast.yaml
+++ b/workflow/cases/aerosol_firex_forecast.yaml
@@ -48,6 +48,7 @@ case:
 
   chem_settings:
     MOD: gsdchem
+    ntdiag: 2
     CFGDIR: /scratch1/NCEPDEV/nems/Raffaele.Montuoro/data/NASA/rc.firex
     INPDIR: /scratch1/NCEPDEV/nems/Raffaele.Montuoro/data/NASA/ExtData
 
