Properly retrieve optional string values.

--- a/workflow/config/base.yaml
+++ b/workflow/config/base.yaml
@@ -141,8 +141,8 @@ config_base:
     export ARCDIR="$NOSCRUB/archive/$PSLOT"
     export ICSDIR="{doc.places.ICSDIR}"
     export ATARDIR="{doc.archiving.ATARDIR}"
-    export OROFIX="{doc.places.OROFIX}"
-    export GRDFIX="{doc.places.GRDFIX}"
+    export OROFIX="{doc.places.get('OROFIX','')}"
+    export GRDFIX="{doc.places.get('GRDFIX','')}"
     
     # Commonly defined parameters in JJOBS
     export envir=${{envir:-"prod"}}
