Update coupled aerosols template cases.

--- a/workflow/cases/aerosol_firex_forecast.yaml
+++ b/workflow/cases/aerosol_firex_forecast.yaml
@@ -1,3 +1,6 @@
+# Note: This case is configured for Hera. All file paths should be properly updated on other platforms.
+##
+##
 case:
   places:
     workflow_file: layout/free_forecast_gfs.yaml
