--- a/workflow/cases/aerosol_free_forecast.yaml
+++ b/workflow/cases/aerosol_free_forecast.yaml
@@ -40,13 +40,16 @@ case:
        WGRP: 1
        WGRP_NTASKS: 24
        WRTIOBUF: "32M"
-    CPL_ATMIC: FV3ICS
 
   chem_settings:
     MOD: gsdchem
     ntdiag: 2
+    # On Hera
     CFGDIR: /scratch1/NCEPDEV/nems/Raffaele.Montuoro/data/NASA/rc
     INPDIR: /scratch1/NCEPDEV/nems/Raffaele.Montuoro/data/NASA/ExtData
+    # On Orion
+    # CFGDIR: /work/noaa/stmp/rmontuor/nasa/data/rc
+    # INPDIR: /work/noaa/stmp/rmontuor/nasa/data/ExtData
 
   post:
     downset: 2
