fix for missing wave boundary cbull and bull files
This adds and extra job JGLOBAL_WAVE_POST_BNDPNTBLL and
changes the points scripts to all use one script for
all point files and the difference is in the exported
variables in the three JJOB scripts

--- a/env/HERA.env
+++ b/env/HERA.env
@@ -41,7 +41,7 @@ if [ $step = "prep" -o $step = "prepbufr" ]; then
     module unload netcdfp/4.7.4
     module load netcdf/4.7.0
 
-elif [ $step = "waveinit" -o $step = "waveprep" -o $step = "wavepostsbs" -o $step = "wavepostbndpnt" -o $step = "wavepostpnt" ]; then
+elif [ $step = "waveinit" -o $step = "waveprep" -o $step = "wavepostsbs" -o $step = "wavepostbndpnt" -o $step = "wavepostbndpntbll" -o $step = "wavepostpnt" ]; then
     export mpmd="--multi-prog"
     export CFP_MP="YES"
     if [ $step = "waveprep" ]; then export MP_PULSE=0 ; fi
