Make aerosol cases single-threaded for now
There are issues running the aerosol model with OpenMP, so the
number of threads is reduced to one. Attempts to increase the layout
to 12×8 resulted in model crash at initialization for unknown reasons.

All testing only on Hera to this point.

Refs: #305

--- a/workflow/cases/aerosol_free_forecast.yaml
+++ b/workflow/cases/aerosol_free_forecast.yaml
@@ -5,6 +5,7 @@ case:
   settings: 
     SDATE: 2013-04-01t00:00:00
     EDATE: 2013-04-01t00:00:00
+    max_job_tries: 1
 
     cplgocart: .true.
     print_esmf: .true.
@@ -36,7 +37,7 @@ case:
     layout:
        x: 6
        y: 8
-       nth: 2
+       nth: 1
        WGRP: 1
        WGRP_NTASKS: 24
        WRTIOBUF: "32M"
