--- a/workflow/cases/aerosol_firex_forecast.yaml
+++ b/workflow/cases/aerosol_firex_forecast.yaml
@@ -11,6 +11,7 @@ case:
   settings: 
     SDATE: 2019-07-01t00:00:00
     EDATE: 2019-07-15t00:00:00
+    max_job_tries: 1
 
     gfs_cyc: 1
 
@@ -43,7 +44,7 @@ case:
     layout:
        x: 6
        y: 8
-       nth: 2
+       nth: 1
        WGRP: 1
        WGRP_NTASKS: 24
        WRTIOBUF: "32M"
