--- a/workflow/defaults/chem.yaml
+++ b/workflow/defaults/chem.yaml
@@ -3,3 +3,11 @@
 chem_defaults: &chem_defaults
   MOD: gsdchem
   ntdiag: 0
+  CFGDIR: !FirstTrue
+    - when: !calc (doc.settings.cplgocart != ".true.")
+      do: "not_set"
+    - otherwise:
+  INPDIR: !FirstTrue
+    - when: !calc (doc.settings.cplgocart != ".true.")
+      do: "not_set"
+    - otherwise:
