--- a/sorc/cpl_build.cfg
+++ b/sorc/cpl_build.cfg
@@ -1,7 +1,6 @@
 #
-# ***** configuration of fv3gfs build *****
+# ***** configuration of coupled workflow build *****
 
- Building libraries (libs) ............................. no
  Building fv3gfs (fv3gfs) .............................. yes
  Building reg2grb2 (reg2grb2) .......................... yes
  Building ww3_prepost (ww3_prepost) .................... yes
@@ -11,15 +10,9 @@
  Building ufs_utils (ufs_utils) ........................ no
  Building gldas (gldas) ................................ no
  Building gfs_wafs (gfs_wafs) .......................... no
- Building gaussian_sfcanl (gaussian_sfcanl)............. no
- Building enkf_chgres_recenter (enkf_chgres_recenter) .. no
- Building enkf_chgres_recenter_nc (enkf_chgres_recenter_nc) .. no
- Building tropcy_NEMS (tropcy) ......................... no
- Building gfs_fbwndgfs (gfs_fbwndgfs) .................. no
- Building gfs_bufrsnd (gfs_bufrsnd) .................... no
- Building fv3nc2nemsio (fv3nc2nemsio) .................. no
- Building regrid_nemsio (regrid_nemsio) ................ no
+ Building workflow_utils (workflow_utils)............... no
  Building gfs_util (gfs_util) .......................... no
+
  
 # -- END --
 
