--- a/Externals.cfg
+++ b/Externals.cfg
@@ -8,14 +8,14 @@ protocol = git
 required = True
 
 [GSI]
-tag = gfsda.v16.0.0
+hash = 9c1fc15d42573b398037319bbf8d5143ad126fb6
 local_path = sorc/gsi.fd
 repo_url = https://github.com/NOAA-EMC/GSI.git
 protocol = git
 required = True
 
 [GLDAS]
-tag = gldas_gfsv16_release.v1.14.0
+tag = gldas_gfsv16_release.v1.15.0
 local_path = sorc/gldas.fd
 repo_url = https://github.com/NOAA-EMC/GLDAS.git
 protocol = git
@@ -23,28 +23,28 @@ required = True
 
 [EMC_post]
 #No externals setting = .gitmodules will be invoked for CMakeModules and comupp/src/lib/crtm2 submodules
-tag = upp_v10.0.3
+hash = 33eb60e5b486d9ff670c76b799f886b7f47c2022
 local_path = sorc/gfs_post.fd
 repo_url = https://github.com/NOAA-EMC/EMC_post.git
 protocol = git
 required = True
 
 [UFS_UTILS]
-#tag = ops-gfsv16.0.0
+hash = 4f44bf8987ef16ca97a7c19364c9d3cf17e87f4e
 local_path = sorc/ufs_utils.fd
 repo_url = https://github.com/NOAA-EMC/UFS_UTILS.git
 protocol = git
 required = True
 
 [EMC_verif-global]
-tag = verif_global_v1.13.4
+tag = verif_global_v1.13.5
 local_path = sorc/verif-global.fd
 repo_url = https://github.com/NOAA-EMC/EMC_verif-global.git
 protocol = git
 required = True
 
 [EMC_gfs_wafs]
-tag = gfs_wafs.v6.0.18
+tag = gfs_wafs.v6.0.19
 local_path = sorc/gfs_wafs.fd
 repo_url = https://github.com/NOAA-EMC/EMC_gfs_wafs.git
 protocol = git
