Update EMC_post, UFS_UTILS, EMC_gfs_wafs versions in Externals.cfg
Refs: #164

--- a/Externals.cfg
+++ b/Externals.cfg
@@ -23,14 +23,14 @@ required = True
 
 [EMC_post]
 #No externals setting = .gitmodules will be invoked for CMakeModules and comupp/src/lib/crtm2 submodules
-hash = 33eb60e5b486d9ff670c76b799f886b7f47c2022
+hash = ff42e0227d6100285d4179a2572b700fd5a959cb
 local_path = sorc/gfs_post.fd
 repo_url = https://github.com/NOAA-EMC/EMC_post.git
 protocol = git
 required = True
 
 [UFS_UTILS]
-hash = 4f44bf8987ef16ca97a7c19364c9d3cf17e87f4e
+tag = ufs_utils_1_3_0
 local_path = sorc/ufs_utils.fd
 repo_url = https://github.com/NOAA-EMC/UFS_UTILS.git
 protocol = git
@@ -44,7 +44,7 @@ protocol = git
 required = True
 
 [EMC_gfs_wafs]
-tag = gfs_wafs.v6.0.19
+hash = c2a29a67d9432b4d6fba99eac7797b81d05202b6
 local_path = sorc/gfs_wafs.fd
 repo_url = https://github.com/NOAA-EMC/EMC_gfs_wafs.git
 protocol = git
