Get CMake supported reg2grb2 into build

--- a/sorc/CMakeLists.txt
+++ b/sorc/CMakeLists.txt
@@ -62,6 +62,7 @@ add_subdirectory(fv3nc2nemsio.fd)
 add_subdirectory(regrid_nemsio.fd)
 add_subdirectory(gaussian_sfcanl.fd)
 add_subdirectory(gfs_bufr.fd)
+add_subdirectory(reg2grb2.fd)
 add_subdirectory(tocsbufr.fd)
 add_subdirectory(fbwndgfs.fd)
 add_subdirectory(vint.fd)
