Add find_package in CMakeLists.txt for reg2grb2 additions

--- a/sorc/CMakeLists.txt
+++ b/sorc/CMakeLists.txt
@@ -55,6 +55,8 @@ find_package(nemsiogfs REQUIRED)
 find_package(sigio REQUIRED)
 find_package(g2 REQUIRED)
 find_package(bufr REQUIRED)
+find_package(landsfcutil REQUIRED)
+find_package(wgrib2 REQUIRED)
 
 add_subdirectory(enkf_chgres_recenter.fd)
 add_subdirectory(enkf_chgres_recenter_nc.fd)
