--- a/env/JET.env
+++ b/env/JET.env
@@ -13,19 +13,20 @@ fi
 
 step=$1
 
-# Theia information
-export npe_node_max=24
-export launcher="mpirun -np"
+if [[ "$PARTITION_BATCH" = "xjet" ]]; then
+  export npe_node_max=24
+elif [[ "$PARTITION_BATCH" = "vjet" ]]; then
+  export npe_node_max=16
+fi
+export launcher="srun --export=ALL"
 
-# Configure MPI environment
-export MPI_BUFS_PER_PROC=2048
-export MPI_BUFS_PER_HOST=2048
-export MPI_GROUP_MAX=256
-export MPI_MEMMAP_OFF=1
-export MP_STDOUTMODE="ORDERED"
+# Configure STACK
 export OMP_STACKSIZE=2048000
 export NTHSTACK=1024000000
-#export LD_BIND_NOW=1
+
+ulimit -s unlimited
+ulimit -a
+
 export job=${PBS_JOBNAME:-$step}
 export jobid=${job}.${PBS_JOBID:-$$}
 
@@ -34,8 +35,8 @@ if [ $step = "prep" -o $step = "prepbufr" ]; then
     nth_max=$(($npe_node_max / $npe_node_prep))
 
     export POE="NO"
-    export BACK=${BACK:-"YES"}
-    export sys_tp="Cray-CS400"
+    export BACK=${BACK:-"NO"}
+    export sys_tp="JET"
 
 elif [ $step = "waveinit" -o $step = "waveprep" -o $step = "wavepostsbs" -o $step = "wavepostbndpnt" -o $step = "wavepostbndpntbll" -o $step = "wavepostpnt" ]; then
 
