Improve cycle cadence specification in CROW
Replaces the old gfs_cyc method for determining cycling frequency with one that
explicitly sets the step length. In place of gfs_cyc there are two new variables
to determine step sizing: STEP_GFS and STEP_DA. Both are of the timedelta type.

STEP_GFS determines the frequency of GFS and defaults to 6 hours
STEP_DA determines the frequency of DA and also defaults to 6 hours

If STEP_GFS is set to 00:00:00, only the DA system is run
If STEP_DA is set to 00:00:00, only the GFS system is run (free-forecast mode)

Note that this new method currently requires the additional setting of STEP_DA
to zero, in addition to using free forecast layout.

If STEP_DA is non-zero, the first cycle is DA-only, so this should be kept in
mind when setting up your experiments (especially if you want GFS to run at
certain times of day). If both are non-zero, STEP_GFS should always be an
integer multiple of STEP_DA, otherwise unexpected behavior may occur. Other
than setting STEP_DA to zero for free forecast, STEP_DA is unlikely to be
changed from its default value in the near-future for GFS, but the new method
is flexible for any future incorporation of LAM system that requires faster DA
cycling.

Examples:

Full-cycling with DA & GFS:
STEP_GFS: !timedelta "06:00:00"
STEP_DA: !timedelta "06:00:00"
(since these are defaults, nothing needs to be placed in the case file, but you may
wish to for clarity)

Normal DA with GFS at each 00z starting 2013-04-01:
SDATE: 2013-03-31t18:00:00
STEP_GFS: !timedelta "24:00:00"

Free forecast with GFS every 24h at 00z starting 2013-04-01:
SDATE: 2013-04-01t00:00:00
STEP_GFS: !timedelta "24:00:00"
STEP_DA: !timedelta "00:00:00"

CROW ss updated to add a new tool that converts a timedelta to a string.

The wave model, which formerly used gfs_cyc to determine the wave cycling interval,
now determines WAVHCYC directly from STEP_GFS. Since this variable is only a number
of hours, this will only work for whole-hour GFS fr

--- a/workflow/cases/aerosol_free_forecast.yaml
+++ b/workflow/cases/aerosol_free_forecast.yaml
@@ -4,8 +4,11 @@ case:
 
   settings: 
     SDATE: 2013-04-01t00:00:00
-    EDATE: 2013-04-01t00:00:00
+    EDATE: 2013-04-02t00:00:00    
+    STEP_GFS: !timedelta "24:00:00"
+    STEP_DA: !timedelta "00:00:00"
     max_job_tries: 1
+    rocoto_cycle_throttle: 1
 
     cplgocart: .true.
     print_esmf: .true.
@@ -35,12 +38,12 @@ case:
     LEVS: 65
     DELTIM: 450
     layout:
-       x: 6
-       y: 8
-       nth: 1
-       WGRP: 1
-       WGRP_NTASKS: 24
-       WRTIOBUF: "32M"
+      x: 6
+      y: 8
+      nth: 1
+      WGRP: 1
+      WGRP_NTASKS: 24
+      WRTIOBUF: "32M"
 
   chem_settings:
     MOD: gsdchem
@@ -55,3 +58,6 @@ case:
   post:
     downset: 2
     GOESF: no
+
+  archiving:
+    archive_to_hpss: False
