--- a/workflow/defaults/chem.yaml
+++ b/workflow/defaults/chem.yaml
@@ -1,13 +1,13 @@
 # default settings for chemistry model core
 
 chem_defaults: &chem_defaults
-  MOD: gsdchem
+  MOD: gocart
   ntdiag: 0
   CFGDIR: !FirstTrue
-    - when: !calc (doc.settings.cplgocart != ".true.")
+    - when: !calc (doc.settings.cplchem != ".true.")
       do: "not_set"
     - otherwise:
   INPDIR: !FirstTrue
-    - when: !calc (doc.settings.cplgocart != ".true.")
+    - when: !calc (doc.settings.cplchem != ".true.")
       do: "not_set"
     - otherwise:
