--- a/workflow/cases/aerosol_firex_forecast.yaml
+++ b/workflow/cases/aerosol_firex_forecast.yaml
@@ -5,8 +5,8 @@ case:
   places:
     workflow_file: layout/free_forecast_gfs.yaml
     BASE_CPLIC: /scratch1/NCEPDEV/nems/Raffaele.Montuoro/data
-    OROFIX:     /scratch1/NCEPDEV/nems/emc.nemspara/RT/NEMSfv3gfs/develop-20200914/INTEL/FV3_input_data_c384/INPUT
-    GRDFIX:     /scratch1/NCEPDEV/nems/emc.nemspara/RT/NEMSfv3gfs/develop-20200914/INTEL/FV3_input_data_c384/INPUT
+    OROFIX:     /scratch1/NCEPDEV/nems/emc.nemspara/RT/NEMSfv3gfs/input-data-20210528/FV3_input_data384/INPUT
+    GRDFIX:     /scratch1/NCEPDEV/nems/emc.nemspara/RT/NEMSfv3gfs/input-data-20210528/FV3_input_data384/INPUT
 
   settings: 
     SDATE: 2019-07-01t00:00:00
@@ -15,7 +15,7 @@ case:
 
     gfs_cyc: 1
 
-    cplgocart: .true.
+    cplchem: .true.
     print_esmf: .true.
     nems_temp: 'atm_aer'
 
@@ -28,7 +28,8 @@ case:
     KEEPDATA: Yes
 
   nsst:
-    NST_MODEL: 0
+    NST_MODEL:  2
+    NST_SPINUP: 1
 
   output_settings:
     FHOUT_GFS: 6
@@ -49,9 +50,10 @@ case:
        WGRP_NTASKS: 24
        WRTIOBUF: "32M"
     CPL_ATMIC: FV3ICS
+    CCPP_SUITE: FV3_GFS_v16
 
   chem_settings:
-    MOD: gsdchem
+    MOD: gocart
     ntdiag: 2
     CFGDIR: /scratch1/NCEPDEV/nems/Raffaele.Montuoro/data/NASA/rc.firex
     INPDIR: /scratch1/NCEPDEV/nems/Raffaele.Montuoro/data/NASA/ExtData
