--- a/workflow/cases/aerosol_free_forecast.yaml
+++ b/workflow/cases/aerosol_free_forecast.yaml
@@ -43,7 +43,7 @@ case:
        WGRP_NTASKS: 24
        WRTIOBUF: "32M"
     CCPP_SUITE: FV3_GFS_v16
-    fscav_aero: [ '*:0.6', 'seas1:1.0', 'seas2:1.0' ]
+    fscav_aero: [ '*:0.6', 'seas1:1.0', 'seas2:1.0', 'seas3:1.0', 'seas4:1.0', 'seas5:1.0' ]
 
   chem_settings:
     MOD: gocart
